Add config file for custom tags